--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
 }
 
+
 .divflex {
   display: flex;
   justify-content: space-between;
@@ -40,7 +41,8 @@ ul {
 }
 
 .popo2 {
-  width: 100%;
+  max-width: 1546px;
+  width: 130%;
   position: relative;
   z-index: 1;
 }
@@ -73,6 +75,10 @@ ul {
 
 .idk1 {
   margin-top: 31px;
+}
+
+section {
+  display: flex;
 }
 
 .idk {
@@ -149,17 +155,39 @@ ul {
 }
 
 @media screen and (width<=1180px) {
+  .popo2 {
+    width: 100%;
+  }
     .idk5 {
         flex-direction: column;
         gap: 33px;
-        margin-left: 550px;
+        width: 300px;
     }
     .container1 {
         flex-direction: column;
         gap: 33px;
-        margin-left: 550px;
+        width: 300px
+        
     }
-    .popo2{
-      width: 300%;
-    }
+  
 }
+
+
+@media screen and (width<=1000px) {
+  .pir {
+    margin-top: -100px;
+    font-size: 31px;
+  }
+  .meo {
+    font-size: 16px;
+  }
+
+  .idk5 {
+    margin-top: 100px;
+  }
+  
+}
+
+
+  
+
